# minilm

./: .gitignore  Cargo.toml  README.md
minilm/: Cargo.toml  README.md
minilm/src/: embeddings.rs  lib.rs  transformer_layer.rs
python/: pyproject.toml
python/minilm/: load_model.py
python/minilm/.ipynb_checkpoints/: load_model-checkpoint.py
site/: Cargo.toml  index.html
site/src/: main.rs
