[package]
name = "minilm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dfdx = { version = "0.13.0", features = ["safetensors"] }
num-traits = "0.2.16"
pyo3 = { version = "0.19.2", optional = true }
rand_distr = "0.4.3"
safetensors = "0.3.3"
serde = "1.0.188"
tokenizers = { version = "0.14.0", default-features = false, features = [
  "unstable_wasm",
] }
wasm-bindgen = "0.2.87"


[features]
pyo3 = ['dep:pyo3']
