[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4"
console_error_panic_hook = "0.1.7"
minilm = { path = "../minilm" }
leptos = { version = "0.4.10", features = [
  "csr",
  "nightly",
  "rustls",
  "web-sys",
  "wasm-bindgen",
] }
safetensors = "0.3.3"
tokenizers = { version = "0.14.0", default-features = false }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
console_log = { version = "1.0.0", features = ["wasm-bindgen", "color"] }
reqwasm = "0.5.0"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
